--- a/functions/vanu/package.json
+++ b/functions/vanu/package.json
@@ -27,8 +27,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
+    "node-forge": "^1.3.1",
+    "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -36,9 +39,12 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/node-forge": "^1.3.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
