--- a/functions/vanu/package.json
+++ b/functions/vanu/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "main": "dist/main.js",
+  "main": "main.js",
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -28,6 +28,7 @@
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
     "node-forge": "^1.3.1",
