--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,36 @@
         "copy \"functions\\vanu\\package.json\" \"functions\\vanu\\dist\""
       ],
       "runtime": "nodejs20"
+    },
+    {
+      "source": "functions/saveNewDocuments",
+      "codebase": "save-new-documents",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ],
+      "runtime": "nodejs20"
+    },
+    {
+      "source": "functions/generateGuideServiCLI",
+      "codebase": "generate-guide-servi-cli",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ],
+      "runtime": "nodejs20"
     }
   ]
 }
