--- a/functions/vanu/package.json
+++ b/functions/vanu/package.json
@@ -26,11 +26,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.0",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
