Agregada funcion para actualizar los datos de ventas

--- a/functions/vanu/.env.example
+++ b/functions/vanu/.env.example
@@ -18,3 +18,4 @@ MAIL_PASS="CLAVE DE EMAIL DE VANU"
 MAIL_HOST="HOST DE EMAIL DE VANU"
 VANU_BANNER_MAIL="URL DEL BANNER DE VANU EN EL STORAGE DE FIREBASE"
 SERVICLI_URI_MANIFEST="API DE SERVICLI PARA MANIFIESTOS"
+SECRET_JWT="Api Key generado para la generación de tokens para el reseteo de contraseña"
