--- a/firebase.json
+++ b/firebase.json
@@ -48,6 +48,21 @@
         "npm --prefix \"$RESOURCE_DIR\" run lint"
       ],
       "runtime": "nodejs20"
+    },
+    {
+      "source": "functions/updateSells",
+      "codebase": "update-sells",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ],
+      "runtime": "nodejs20"
     }
   ]
 }
