--- a/functions/vanu/package.json
+++ b/functions/vanu/package.json
@@ -22,6 +22,7 @@
   "main": "main.js",
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
@@ -33,6 +34,7 @@
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.0",
@@ -46,6 +48,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.3.1",
     "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.15",
