--- a/functions/vanu/.env.example
+++ b/functions/vanu/.env.example
@@ -16,6 +16,7 @@ SERVICLI_URI_TRACKING="API DE SERVICLI PARA TRACKING"
 MAIL_USER="USUARIO EMAIL DE VANU"
 MAIL_PASS="CLAVE DE EMAIL DE VANU"
 MAIL_HOST="HOST DE EMAIL DE VANU"
+MAIL_SENDER="EMAIL QUE ENVIA EL MENSAJE DE VANU"
 VANU_BANNER_MAIL="URL DEL BANNER DE VANU EN EL STORAGE DE FIREBASE"
 SERVICLI_URI_MANIFEST="API DE SERVICLI PARA MANIFIESTOS"
 SECRET_JWT="Api Key generado para la generación de tokens para el reseteo de contraseña"
